--- a/notebooks/preprocessing_and_analysis.ipynb
+++ b/notebooks/preprocessing_and_analysis.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
@@ -105,6 +106,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ID clean-up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -183,6 +191,68 @@
    "outputs": [],
    "source": [
     "total_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "total_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Address clean-up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'country': 'Suisse', 'city': 'Renens', 'ZIP': '1020', 'street': 'Place du marché 1'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "addrs = total_df[\"address\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "countries = []\n",
+    "cities = []\n",
+    "zips = []\n",
+    "streets = []\n",
+    "\n",
+    "for addr in addrs:\n",
+    "    if not addr is None:\n",
+    "        countries.append(addr.get(\"country\"))\n",
+    "        cities.append(addr.get(\"city\"))\n",
+    "        zips.append(addr.get(\"ZIP\"))\n",
+    "        streets.append(addr.get(\"street\"))\n",
+    "    else:\n",
+    "        countries.append(None)\n",
+    "        cities.append(None)\n",
+    "        zips.append(None)\n",
+    "        streets.append(None)"
    ]
   },
   {
