--- a/notebooks/preprocessing_and_analysis.ipynb
+++ b/notebooks/preprocessing_and_analysis.ipynb
@@ -17,11 +17,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_ch = pd.read_json(\"../data/parsed_ch.json\")"
+    "df_ch = pd.read_json(\"../data/parsed_ch.json\").transpose()\n",
+    "df_com0 = pd.read_json(\"../data/parsed_com0.json\").transpose()\n",
+    "df_com1 = pd.read_json(\"../data/parsed_com1.json\").transpose()\n",
+    "df_com2 = pd.read_json(\"../data/parsed_com2.json\").transpose()\n",
+    "df_com3 = pd.read_json(\"../data/parsed_com3.json\").transpose()"
    ]
   },
   {
@@ -32,7 +36,8 @@
    },
    "outputs": [],
    "source": [
-    "df_ch.head()"
+    "df = pd.concat([df_ch, df_com0])#, df_com1, df_com2, df_com3])\n",
+    "df.head()"
    ]
   },
   {
@@ -43,59 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "df_ch = df_ch.transpose()\n",
-    "df_ch.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df_0 = pd.read_json(\"../data/parsed_com0.json\")\n",
-    "df_0 = df_0.transpose()\n",
-    "df_0.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df_1 = pd.read_json(\"../data/parsed_com1.json\")\n",
-    "df_1 = df_1.transpose()\n",
-    "df_2 = pd.read_json(\"../data/parsed_com2.json\")\n",
-    "df_2 = df_2.transpose()\n",
-    "df_3 = pd.read_json(\"../data/parsed_com3.json\")\n",
-    "df_3 = df_3.transpose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "total_df = df_ch.append(other=[df_0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "total_df.shape"
+    "df.shape"
    ]
   },
   {
@@ -113,21 +66,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "links = total_df.index"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "structure of each line : `['https:', '', 'www.lafourchette.com', 'restaurant', 'joe-s', '218659']`"
+    "structure : `['https:', '', 'www.lafourchette.com', 'restaurant', 'joe-s', '218659']`"
    ]
   },
   {
@@ -142,7 +84,7 @@
     "restaurant_names = []\n",
     "websites = []\n",
     "\n",
-    "for link in links.values:\n",
+    "for link in df.index.values:\n",
     "    link_split = link.split(\"/\")\n",
     "    websites.append(link_split[2])\n",
     "    restaurant_names.append(link_split[-2])\n",
@@ -168,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "total_df = total_df.set_index([restaurant_ids])"
+    "df = df.set_index([restaurant_ids])"
    ]
   },
   {
@@ -179,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "total_df[\"website\"] = websites"
+    "np.unique(websites)"
    ]
   },
   {
@@ -190,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "total_df.shape"
+    "df.head()"
    ]
   },
   {
@@ -201,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "total_df.head()"
+    "df.shape"
    ]
   },
   {
@@ -215,18 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{'country': 'Suisse', 'city': 'Renens', 'ZIP': '1020', 'street': 'Place du marché 1'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "addrs = total_df[\"address\"]"
+    "structure : {'country': 'Suisse', 'city': 'Renens', 'ZIP': '1020', 'street': 'Place du marché 1'}"
    ]
   },
   {
@@ -237,22 +168,166 @@
    },
    "outputs": [],
    "source": [
-    "countries = []\n",
-    "cities = []\n",
-    "zips = []\n",
-    "streets = []\n",
-    "\n",
-    "for addr in addrs:\n",
-    "    if not addr is None:\n",
-    "        countries.append(addr.get(\"country\"))\n",
-    "        cities.append(addr.get(\"city\"))\n",
-    "        zips.append(addr.get(\"ZIP\"))\n",
-    "        streets.append(addr.get(\"street\"))\n",
-    "    else:\n",
-    "        countries.append(None)\n",
-    "        cities.append(None)\n",
-    "        zips.append(None)\n",
-    "        streets.append(None)"
+    "no_addr = df[df[\"address\"].isnull()]\n",
+    "no_addr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove missing address entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.drop(no_addr.index, inplace=True, errors='ignore')\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "addrs = pd.DataFrame.from_records(df[\"address\"], index=df.index)\n",
+    "addrs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "addrs.ZIP.unique()[:100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove swiss prefix and cedex (special business mail) suffix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "addrs.ZIP = addrs.ZIP.apply(lambda z: z[3:] if z.startswith('CH-') else z)\n",
+    "addrs.ZIP = addrs.ZIP.apply(lambda z: z[:-6] if z.endswith(' CEDEX') else z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.unique(addrs.ZIP)[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "addrs.ZIP = addrs.ZIP.astype(np.int, raise_on_error=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "addrs.country.unique() # TODO FIX THIS USING ZIP !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df.drop('address', axis=1), addrs], axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### GPS clean-up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "structure : {'lng': 6.1227483, 'lat': 46.2393855}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "no_gps = df[df[\"gps\"].isnull()]\n",
+    "no_gps.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gps = pd.DataFrame.from_records(df['gps'], index=df.index)\n",
+    "gps.head()"
    ]
   },
   {
@@ -260,6 +335,42 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gps.lat = gps.lat.astype(np.float)\n",
+    "gps.lng = gps.lng.astype(np.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df.drop('gps', axis=1), gps], axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ratings clean-up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -281,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
