add parsing and inserts for recipe 1 and resto

--- a/notebooks/preprocessing_and_analysis.ipynb
+++ b/notebooks/preprocessing_and_analysis.ipynb
@@ -10,7 +10,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import json"
+    "import json\n",
+    "from elasticsearch import Elasticsearch\n",
+    "from elasticsearch import helpers as eshelper"
    ]
   },
   {
@@ -25,7 +27,8 @@
     "df_com0 = pd.read_json(\"../data/parsed_com0.json\").transpose()\n",
     "df_com1 = pd.read_json(\"../data/parsed_com1.json\").transpose()\n",
     "df_com2 = pd.read_json(\"../data/parsed_com2.json\").transpose()\n",
-    "df_com3 = pd.read_json(\"../data/parsed_com3.json\").transpose()"
+    "df_com3 = pd.read_json(\"../data/parsed_com3.json\").transpose()\n",
+    "df_com4 = pd.read_json(\"../data/parsed_com4.json\").transpose()"
    ]
   },
   {
@@ -36,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.concat([df_ch, df_com0])#, df_com1, df_com2, df_com3])\n",
+    "df = pd.concat([df_ch, df_com0, df_com1, df_com2, df_com3, df_com4])\n",
     "df.head()"
    ]
   },
@@ -169,7 +172,7 @@
    "outputs": [],
    "source": [
     "no_addr = df[df[\"address\"].isnull()]\n",
-    "no_addr"
+    "no_addr.shape"
    ]
   },
   {
@@ -199,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "addrs = pd.DataFrame.from_records(df[\"address\"], index=df.index)\n",
+    "addrs = pd.DataFrame.from_records(df[\"address\"].values, index=df.index)\n",
     "addrs.head()"
    ]
   },
@@ -259,24 +262,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "addrs.country.unique() # TODO FIX THIS USING ZIP !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "df = pd.concat([df.drop('address', axis=1), addrs], axis=1)\n",
-    "df.head()"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for u in addrs.country.unique():\n",
+    "    print(\"{}: {}\".format(u, np.count_nonzero(addrs.country == u)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keep only true country as other are non significant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = df[addrs.country.isin(['Suisse', 'France', 'Belgique', 'Monaco', 'Belgique', 'Espagne', 'Italie'])]"
    ]
   },
   {
@@ -326,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "gps = pd.DataFrame.from_records(df['gps'], index=df.index)\n",
+    "gps = pd.DataFrame.from_records(df['gps'].values, index=df.index)\n",
     "gps.head()"
    ]
   },
@@ -358,19 +380,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ratings clean-up"
+    "## Insertion"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "entries = []\n",
+    "for i, resto in df.iterrows():\n",
+    "    if resto.menu:\n",
+    "        fmt = {\n",
+    "            '_index': 'resto',\n",
+    "            '_type': 'raw',\n",
+    "            '_id': i,\n",
+    "            '_source': {\n",
+    "                'name': resto['name'],\n",
+    "                'street': resto.street,\n",
+    "                'zip': resto.ZIP,\n",
+    "                'city': resto.city,\n",
+    "                'country': resto.country,\n",
+    "                'lat': resto.lat,\n",
+    "                'lng': resto.lng\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        if resto.menu.get('Entrée'):\n",
+    "            fmt['_source']['starters'] = [{'name': e, 'price': p} for e, p in resto.menu.get('Entrée').items()]\n",
+    "            \n",
+    "        if resto.menu.get('Plat'):\n",
+    "            fmt['_source']['mains'] = [{'name': e, 'price': p} for e, p in resto.menu.get('Plat').items()]\n",
+    "            \n",
+    "        if resto.menu.get('Dessert'):\n",
+    "            fmt['_source']['desserts'] = [{'name': e, 'price': p} for e, p in resto.menu.get('Dessert').items()]\n",
+    "            \n",
+    "        if resto.drinks:\n",
+    "            fmt['_source']['drinks'] = [{'name': e, 'price': p} for e, p in resto.drinks.items()]\n",
+    "\n",
+    "        entries.append(fmt)\n",
+    "        \n",
+    "len(entries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "client = Elasticsearch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "eshelper.bulk(client, entries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
