Added cuisineAZ and Ricardo recipe processing scripts Renamed "notebooks" to recipe_processing Renamed "processing" to "restaurant_prcessing" Renamed Scrapy spiders to scraped websites names

--- a/scrap/marmiton/README
+++ b/scrap/marmiton/README
@@ -4,32 +4,40 @@
 ### Create folder marmiton_data
 mkdir marmiton_data
 
-### Run marmiton_urls for max 1 minutes in order to grab many URLS
+### Run marmiton_urls for max 10 minutes in order to grab many URLS
 timeout 10m scrapy runspider marmiton_urls.py
+
 
 ### Keep only the uniq URLS
 sort marmiton_data/urls_all | uniq  > marmiton_data/urls_todo
 cp marmiton_data/urls_todo marmiton_data/urls_all
 
+
 ### Run as many times as necessary (by hand to avoid captcha)
-### Do not forget to change file name
+### Do not forget to change JSON file name to avoid overwriting
 scrapy runspider -o marmiton_data/data.json marmiton.py
+
 
 ### Regroup all scraped data 
 for f in marmiton_data/*.json; do cat $f >> scraped_data.json; done
 
+
 ### Keep only uniq recipes in case there are some duplicates
 for url in `cat marmiton_data/urls-all`; do grep -m1 -P "$url" marmiton_data/scraped_data.json >> uniq_data.json; done
+
 
 ### Edit so that it is a valid JSON file
 # Add mising commas
 sed -i.bak 's/}$/},/g' marmiton_data/uniq_data.json
 
+
 # Remove comma on last line
 sed -i '$s/},$/}/' marmiton_data/uniq_data.json
 
+
 # Add brackets at the beginning and end of the file
 sed -i -e '1s/^/[\n/' -e '$s/$/\n]/' marmiton_data/uniq_data.json
+
 
 mv marmiton_data/uniq_data.json ./marmiton.json
 rm --ri marmiton_data
