--- a/notebooks/migration.ipynb
+++ b/notebooks/migration.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "client = Elasticsearch()"
+    "client = Elasticsearch(hosts='http://')"
    ]
   },
   {
