--- a/notebooks/preprocessing_and_analysis.ipynb
+++ b/notebooks/preprocessing_and_analysis.ipynb
@@ -434,7 +434,7 @@
    },
    "outputs": [],
    "source": [
-    "client = Elasticsearch()"
+    "client = Elasticsearch(hosts='http://')"
    ]
   },
   {
