--- a/notebooks/recipe1.ipynb
+++ b/notebooks/recipe1.ipynb
@@ -361,7 +361,7 @@
    },
    "outputs": [],
    "source": [
-    "client = Elasticsearch()"
+    "client = Elasticsearch(hosts='http://')"
    ]
   },
   {
