--- a/recipe_processing/preprocessing_and_analysis.ipynb
+++ b/recipe_processing/preprocessing_and_analysis.ipynb
@@ -438,6 +438,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "eshelper.bulk(client, entries)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -475,7 +486,43 @@
    },
    "outputs": [],
    "source": [
-    "eshelper.bulk(client, entries)"
+    "map_ = folium.Map(location=[46.599505, 3.480752], zoom_start=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "points = df[[\"name\", \"lat\", \"lng\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plugins.HeatMap(zip(points.lat.values, points.lng.values, len(points) * [2]), radius = 15).add_to(map_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#for name, lat, lng in points.values:\n",
+    "#    folium.RegularPolygonMarker(\n",
+    "#        location=[lat, lng], fill_color='red', popup=name, number_of_sides=12, radius=8, \n",
+    "#    ).add_to(map_)"
    ]
   },
   {
