fix resto insert

--- a/recipe_processing/preprocessing_and_analysis.ipynb
+++ b/recipe_processing/preprocessing_and_analysis.ipynb
@@ -395,9 +395,8 @@
     "for i, resto in df.iterrows():\n",
     "    if resto.menu:\n",
     "        fmt = {\n",
-    "            '_index': 'resto',\n",
+    "            '_index': 'restaurants',\n",
     "            '_type': 'raw',\n",
-    "            '_id': i,\n",
     "            '_source': {\n",
     "                'name': resto['name'],\n",
     "                'street': resto.street,\n",
