Send marmiton recipes to elasticsearch

--- a/recipe_processing/marmiton_recipe_processing.ipynb
+++ b/recipe_processing/marmiton_recipe_processing.ipynb
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
-    "import nltk"
+    "import nltk\n",
+    "from elasticsearch import Elasticsearch\n",
+    "from elasticsearch import helpers as eshelper"
    ]
   },
   {
@@ -44,18 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "recipies = df[[\"title\", \"ingredients\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test = recipies.ingredients"
+    "recipies = df[[\"title\", \"ingredients\", \"quantity\"]]"
    ]
   },
   {
@@ -67,13 +58,25 @@
    "outputs": [],
    "source": [
     "mesures = np.array(['dl', 'l', 'ml', 'cl', 'g', 'kg', 'cuillère', 'cuillères', 'cuillerées', 'pincée', 'poignée', 'pincées', 'verre'])\n",
-    "litre_ml = [\"ml\",\"cl\",\"dl\",\"l\"]\n",
-    "poids_g = [\"g\", \"kg\"]\n",
+    "litre_ml = np.array([\"ml\",\"cl\",\"dl\",\"l\"])\n",
+    "poids_g = np.array([\"g\", \"kg\"])\n",
     "long = np.array(['cuillère', 'cuillères', 'cuillerées'])\n",
     "long_num = np.array([3, 3, 3])\n",
     "stop_word = np.array(['une', 'de', 'petits', 'petites', 'petite', 'petit', 'grand', 'gros', 'grosse', 'beaux', 'beau'])\n",
     "mult = np.array(['ou', 'à'])\n",
-    "quant = np.array(['paquet', 'sachet'])"
+    "quant = np.array(['paquet', 'sachet'])\n",
+    "mapping = {\n",
+    "    'cuillères': (10, 'ml'),\n",
+    "    'cuillerées': (10, 'ml'),\n",
+    "    'cuillère': (10, 'ml'),\n",
+    "    'cuillerée': (10, 'ml'),\n",
+    "    'pincées': (3, 'g'),\n",
+    "    'pincée': (3, 'g'),\n",
+    "    'poignées': (50, 'g'),\n",
+    "    'poignée': (50, 'g'),\n",
+    "    'verres': (300, 'ml'),\n",
+    "    'verre': (300, 'ml'),\n",
+    "}"
    ]
   },
   {
@@ -108,30 +111,19 @@
    },
    "outputs": [],
    "source": [
-    "np.where([False, False, True, False, False])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def parse(ingredients):\n",
-    "    res = []\n",
+    "def parse(title, nbr_pers, ingredients):\n",
+    "    res = {'name': title, 'ingredients': []}\n",
     "    for ingredient in ingredients:\n",
     "        arr = np.array(nltk.word_tokenize(ingredient))\n",
     "        arr = arr[np.in1d(arr, stop_word, invert=True)]\n",
     "        \n",
     "        if len(arr) > 0:\n",
     "\n",
-    "            quant = '/'\n",
-    "            mesure = \"/\"\n",
+    "            quant = None\n",
+    "            mesure = None\n",
     "\n",
     "            num = number(arr[0])\n",
-    "\n",
+    "            \n",
     "            if len(arr) > 1 and num:\n",
     "                quant = num\n",
     "\n",
@@ -148,20 +140,34 @@
     "\n",
     "                    if mesure in long:\n",
     "                        num = long_num[long == mesure]\n",
-    "                        mesure = \" \".join(arr[1:1+num])\n",
+    "                \n",
+    "                if arr[1] in mapping.keys():\n",
+    "                    quant *= mapping[arr[1]][0]\n",
+    "                    mesure = mapping[arr[1]][1]\n",
     "                \n",
     "                if mesure in litre_ml:\n",
-    "                    quant *= 10 ** np.where(litre_ml == mesure)[0]\n",
+    "                    quant *= 10 ** np.where(litre_ml == mesure)[0][0]\n",
+    "                    mesure = \"ml\"\n",
     "                    \n",
     "                if mesure in poids_g:\n",
-    "                    quant *= 1000 ** np.where(poids_g == mesure)[0]\n",
+    "                    quant *= 1000 ** np.where(poids_g == mesure)[0][0]\n",
+    "                    mesure = \"g\"\n",
+    "                    \n",
+    "                try:\n",
+    "                    nbr_pers = float(nbr_pers)\n",
+    "                    if nbr_pers and not nbr_pers == 0:\n",
+    "                        quant /= float(nbr_pers)\n",
+    "                except ValueError:\n",
+    "                    pass\n",
     "                    \n",
     "                arr = arr[1+num:]\n",
     "            elif arr[0][0].isdigit():\n",
     "                _1 = arr[0]\n",
     "                for mes in mesures:\n",
     "                    if mes in _1:\n",
-    "                        quant = _1.replace(mes, '')\n",
+    "                        num = number(_1.replace(mes, ''))\n",
+    "                        if num:\n",
+    "                            quant = num\n",
     "                        mesure = mes\n",
     "                        arr[1:]\n",
     "\n",
@@ -171,7 +177,12 @@
     "                    idx = idx[0]\n",
     "                arr = arr[:idx]\n",
     "\n",
-    "            res.append((quant, mesure, \" \".join(arr)))\n",
+    "            if not quant is None:\n",
+    "                res['ingredients'].append({\n",
+    "                    'quantity': quant, \n",
+    "                    'unit': mesure, \n",
+    "                    'content': \" \".join(arr)\n",
+    "                })\n",
     "        \n",
     "    return res"
    ]
@@ -184,7 +195,37 @@
    },
    "outputs": [],
    "source": [
-    "res = [parse(ingds) for ingds in test]"
+    "res = [parse(title, nbr_pers, ingds) for title, ingds, nbr_pers in recipies.values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "entries = []\n",
+    "for recipe in res:\n",
+    "    fmt = {\n",
+    "        '_index': 'recipes',\n",
+    "        '_type': 'marmiton',\n",
+    "        '_source': recipe\n",
+    "    }\n",
+    "    entries.append(fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "client = Elasticsearch(hosts='TODO')\n",
+    "eshelper.bulk(client, entries)"
    ]
   }
  ],
