add algo for aggreggation

--- a/notebooks/migration.ipynb
+++ b/notebooks/migration.ipynb
@@ -105,6 +105,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "re_brand = re.compile('([^:]*):(.+)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -119,7 +130,7 @@
     "        mapping = product_nutrients[product_nutrients.product_id == product.id]\n",
     "        for i, m in mapping.iterrows():\n",
     "\n",
-    "            nut = nutrients[nutrients.id == m.nutrient_id]\n",
+    "            nut = nutrients[nutrients.id == m.nutrient_id]        \n",
     "            nuts.append({\n",
     "                'name': nut.name_translations.values[0]['fr'],\n",
     "                'unit': nut.unit.values[0],\n",
@@ -130,12 +141,21 @@
     "            })\n",
     "\n",
     "        if len(nuts):\n",
+    "            \n",
+    "            brand_existence = re_brand.search(name)\n",
+    "            if brand_existence:\n",
+    "                brand, name_cleaned = re_brand.search(name).groups()\n",
+    "            else:\n",
+    "                brand = ''\n",
+    "                name_cleaned = name\n",
+    "            \n",
     "            fmt = {\n",
-    "                '_index': 'products',\n",
+    "                '_index': 'products1',\n",
     "                '_type': 'openfood',\n",
     "                '_id': product.id,\n",
     "                '_source': {\n",
-    "                    'name': name,\n",
+    "                    'name': name_cleaned,\n",
+    "                    'brand': brand,\n",
     "                    'unit': product.unit,\n",
     "                    'quantity': product.quantity,\n",
     "                    'unit_portion': product.portion_quantity,\n",
