terminate main city analysis

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -13,8 +13,10 @@
     "import matplotlib.pyplot as plt\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch_dsl import Search, Q\n",
+    "from elasticsearch import helpers as eshelper\n",
     "import nltk\n",
-    "from nltk.tag import StanfordPOSTagger"
+    "from nltk.tag import StanfordPOSTagger\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -38,18 +40,6 @@
    "source": [
     "restaurants = [r for r in Search(using=client, index='restaurants').scan()]\n",
     "len(restaurants)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "resto = restaurants[4]\n",
-    "resto.to_dict()"
    ]
   },
   {
@@ -113,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "restaurants = [r for r in Search(using=client, index='restaurants').query('match', **{'zip': '1205'}).scan()]\n",
+    "restaurants = [r for r in Search(using=client, index='restaurants').query('match', **{'city': 'lyon'}).scan()]\n",
     "len(restaurants)"
    ]
   },
@@ -227,6 +217,11 @@
     "                    'name': term\n",
     "                }\n",
     "            },\n",
+    "            'post_filter': {\n",
+    "                'exists': {\n",
+    "                  'field': 'ingredients.unit'\n",
+    "                }\n",
+    "              },\n",
     "            'size': size,\n",
     "            'fielddata_fields': fields\n",
     "        }\n",
@@ -241,17 +236,8 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "def recipes_enrichment(term, min_occurence=2, min_ing=5, prnt=True):\n",
+    "def recipes_enrichment(term, min_occurence=2, min_ing=5, prnt=False):\n",
     "    recipes = search_fielddata('recipes', term, ['ingredients.content'], 20)\n",
     "    \n",
     "    ings = {}\n",
@@ -261,7 +247,7 @@
     "                ings[ing] += 1\n",
     "            else:\n",
     "                ings[ing] = 1\n",
-    "    \n",
+    "        \n",
     "    ings_scores = sorted([(v, k) for k, v in ings.items()], reverse=True, key=lambda x: x[0])\n",
     "    ings_trendy = set([v for k, v in ings_scores if k >= min_occurence])\n",
     "    \n",
@@ -279,9 +265,7 @@
     "    if prnt:\n",
     "        print([r['_source']['name'] for r in recipes_trendy])\n",
     "    \n",
-    "    return recipes\n",
-    "\n",
-    "re = recipes_enrichment('Parmentier de cuisse de canard confite, purée de patate douce')"
+    "    return recipes"
    ]
   },
   {
@@ -425,18 +409,67 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def merge_nutriments(arr, avg=False):\n",
+    "    \n",
+    "    arr = [a for a in arr if a]\n",
+    "    nut_names = set()\n",
+    "    for nutriments in arr:\n",
+    "        for nut, value in nutriments.items():\n",
+    "            nut_names.add(nut)\n",
+    "    \n",
+    "    merged = {}\n",
+    "    averger = len(arr) if avg else 1.0\n",
+    "    \n",
+    "    for nut_name in nut_names:\n",
+    "        quantity = 0.0\n",
+    "        unit = None\n",
+    "        \n",
+    "        for nutriments in arr:\n",
+    "            if nut_name in nutriments:\n",
+    "                if not unit:\n",
+    "                    unit = nutriments[nut_name]['unit']\n",
+    "                if unit == nutriments[nut_name]['unit']:\n",
+    "                    quantity += nutriments[nut_name]['quantity']\n",
+    "                \n",
+    "        merged[nut_name] = {\n",
+    "            'quantity': quantity / averger,\n",
+    "            'unit': unit\n",
+    "        }\n",
+    "        \n",
+    "    return merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pretty_nutriments(nuts):\n",
+    "    print('\\n'.join(['{:25}{:.2f}\\t{}'.format(k, v['quantity'], v['unit']) for k, v in nuts.items()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def ingredients_enrichment(recipe, prnt=False, log=True):\n",
+    "def ingredients_enrichment(recipe, prnt=False, log=False):\n",
     "    \n",
     "    ingredients = recipe['_source']['ingredients']\n",
     "    \n",
     "    if log:\n",
     "        print(recipe['_source']['name'])\n",
     "    \n",
-    "    nutriments_names = set()\n",
     "    ingredients_nutriments = []\n",
     "    \n",
     "    for i in ingredients:\n",
@@ -475,7 +508,6 @@
     "\n",
     "            selected_nutriments = {}\n",
     "            for n in p['_source']['nutriments']:\n",
-    "                nutriments_names.add(n['name'])\n",
     "                selected_nutriments[n['name']] = {\n",
     "                    'unit': n['unit'],\n",
     "                    'quantity': n['per_hundred'] / 100.0 * factor\n",
@@ -488,29 +520,12 @@
     "\n",
     "    #print(ingredients_nutriments)\n",
     "    \n",
-    "    final_nutriments = {}\n",
-    "    for nut_name in nutriments_names:\n",
-    "        quantity = 0.0\n",
-    "        unit = None\n",
-    "        \n",
-    "        for ing_nut in ingredients_nutriments:\n",
-    "            if nut_name in ing_nut:\n",
-    "                if not unit:\n",
-    "                    unit = ing_nut[nut_name]['unit']\n",
-    "                \n",
-    "                if unit == ing_nut[nut_name]['unit']:\n",
-    "                    quantity += ing_nut[nut_name]['quantity']\n",
-    "                \n",
-    "        final_nutriments[nut_name] = {\n",
-    "            'quantity': quantity,\n",
-    "            'unit': unit\n",
-    "        }\n",
+    "    final_nutriments = merge_nutriments(ingredients_nutriments)\n",
     "      \n",
     "    if log:\n",
-    "        print('\\n'.join(['{:25}{:.2f}\\t{}'.format(k, v['quantity'], v['unit']) for k, v in final_nutriments.items()]))\n",
-    "    return final_nutriments\n",
-    "\n",
-    "ingredients_enrichment(re[0])"
+    "        pretty_nutriments(final_nutriments)\n",
+    "        \n",
+    "    return final_nutriments"
    ]
   },
   {
@@ -521,6 +536,127 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def meal(name, min_occurence=2, min_ing=5):\n",
+    "    re = recipes_enrichment(name, min_occurence=min_occurence, min_ing=min_ing)\n",
+    "    if len(re):\n",
+    "        return ingredients_enrichment(re[0]), re[0]['_source']['name']\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def resto(rest):\n",
+    "    \n",
+    "    bilan = {\n",
+    "        'id': rest.meta.id,\n",
+    "        'name': rest.name,\n",
+    "        'analysis': []\n",
+    "    }\n",
+    "    \n",
+    "    total = []\n",
+    "    \n",
+    "    if 'starters' in rest:\n",
+    "        local = []\n",
+    "        for m in rest.starters:\n",
+    "            #print(m.name)\n",
+    "            nutriments, match = meal(m['name'])\n",
+    "            \n",
+    "            local.append(nutriments)\n",
+    "            total.append(nutriments)\n",
+    "            bilan['analysis'].append({\n",
+    "                'name': m.name,\n",
+    "                'match': match,\n",
+    "                'price': m.price,\n",
+    "                'nutriments': nutriments,\n",
+    "                'cat': 'starters'\n",
+    "            })\n",
+    "        bilan['starters'] = merge_nutriments(local, avg=True)\n",
+    "    \n",
+    "    if 'mains' in rest:\n",
+    "        local = []\n",
+    "        for m in rest.mains:\n",
+    "            #print(m.name)\n",
+    "            nutriments, match = meal(m['name'])\n",
+    "            \n",
+    "            local.append(nutriments)\n",
+    "            total.append(nutriments)\n",
+    "            bilan['analysis'].append({\n",
+    "                'name': m.name,\n",
+    "                'match': match,\n",
+    "                'price': m.price,\n",
+    "                'nutriments': nutriments,\n",
+    "                'cat': 'mains'\n",
+    "            })\n",
+    "        bilan['mains'] = merge_nutriments(local, avg=True)\n",
+    "        \n",
+    "    if 'desserts' in rest:\n",
+    "        local = []\n",
+    "        for m in rest.desserts:\n",
+    "            #print(m.name)\n",
+    "            nutriments, match = meal(m['name'])\n",
+    "            \n",
+    "            local.append(nutriments)\n",
+    "            total.append(nutriments)\n",
+    "            bilan['analysis'].append({\n",
+    "                'name': m.name,\n",
+    "                'match': match,\n",
+    "                'price': m.price,\n",
+    "                'nutriments': nutriments,\n",
+    "                'cat': 'desserts'\n",
+    "            })\n",
+    "        bilan['desserts'] = merge_nutriments(local, avg=True)\n",
+    "    \n",
+    "    bilan['total'] = merge_nutriments(total, avg=True)\n",
+    "    return bilan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for r in tqdm(restaurants):\n",
+    "    try:\n",
+    "        src = resto(r)\n",
+    "        fmt = {\n",
+    "            '_index': 'analysis',\n",
+    "            '_type': 'fst',\n",
+    "            '_source': src\n",
+    "        }\n",
+    "        eshelper.bulk(client, [fmt])\n",
+    "    except Exception as e:\n",
+    "        if 'name' in r:\n",
+    "            print(r.name)\n",
+    "        print(e)\n",
+    "        print('===')"
+   ]
   },
   {
    "cell_type": "code",
