--- a/notebooks/Queries.ipynb
+++ b/notebooks/Queries.ipynb
@@ -8,9 +8,21 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as stats\n",
     "import seaborn as sns\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch_dsl import Search, Q\n",
@@ -25,47 +37,8 @@
    },
    "outputs": [],
    "source": [
-    "def merge_nutriments(arr, avg=False):\n",
-    "    \n",
-    "    arr = [a for a in arr if a]\n",
-    "    nut_names = set()\n",
-    "    for nutriments in arr:\n",
-    "        for nut, value in nutriments.items():\n",
-    "            nut_names.add(nut)\n",
-    "    \n",
-    "    merged = {}\n",
-    "    averger = len(arr) if avg else 1.0\n",
-    "    \n",
-    "    for nut_name in nut_names:\n",
-    "        quantity = 0.0\n",
-    "        unit = None\n",
-    "        \n",
-    "        for nutriments in arr:\n",
-    "            if nut_name in nutriments:\n",
-    "                if not unit:\n",
-    "                    unit = nutriments[nut_name]['unit']\n",
-    "                if unit == nutriments[nut_name]['unit']:\n",
-    "                    quantity += nutriments[nut_name]['quantity']\n",
-    "                \n",
-    "        merged[nut_name] = {\n",
-    "            'quantity': quantity / averger,\n",
-    "            'unit': unit,\n",
-    "            'quantity': quantity / averger\n",
-    "        }\n",
-    "        \n",
-    "    return merged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def pretty_nutriments(nuts):\n",
-    "    print('\\n'.join(['{:25}{:.2f}\\t{}'.format(k, v['quantity'], v['unit']) for k, v in nuts.items()]))"
+    "    print('\\n'.join(['{:25}{:.2f}\\t{}\\t{:.2f}'.format(k, v['quantity'], v['unit'], v['variance']) for k, v in nuts.items()]))"
    ]
   },
   {
@@ -83,7 +56,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -182,20 +155,71 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "units = {}\n",
+    "rests = []\n",
+    "for city, group in cities.items():\n",
+    "    print(city)\n",
+    "    for rest, agg in group:\n",
+    "        if len(agg.analysis):\n",
+    "            for k, v in agg.total.to_dict().items():\n",
+    "                units[k] = v['unit']\n",
+    "            rest = {k: v['quantity'] for k, v in agg.total.to_dict().items()}\n",
+    "\n",
+    "            rest['city'] = city\n",
+    "            rest['country'] = 'CH' if city == 'geneva' or city == 'lausanne' else 'FR'\n",
+    "            rests.append(rest)\n",
+    "\n",
+    "rests = pd.DataFrame(rests)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for city, group in cities.items():\n",
-    "    print(city)\n",
-    "    selector = []\n",
-    "    for rest, agg in group:\n",
-    "        if len(agg.analysis):\n",
-    "            selector.append(agg.total.to_dict())\n",
-    "            \n",
-    "    print(len(selector))\n",
-    "    pretty_nutriments(merge_nutriments(selector, avg=True))\n",
-    "    print()"
+    "rests_robust = rests[rests.apply(lambda x: np.abs(x - x.mean()) / x.std() < 3  if type(x) is str else x).all(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def country_criteria(name):\n",
+    "    sns.barplot(x='country', y=name, data=rests_robust)\n",
+    "    a = rests_robust[rests_robust.country == 'CH'][name]\n",
+    "    b = rests_robust[rests_robust.country == 'FR'][name]\n",
+    "    test = stats.ttest_ind(a, b, equal_var=False)\n",
+    "    pval = ', pval = {:.2f}'.format(test.pvalue)\n",
+    "    count = ', CH/FR = {}/{}'.format(len(a), len(b))\n",
+    "    plt.title('{} ({}) per country{}{}'.format(name, units[name], count, pval))\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def city_criteria(name):\n",
+    "    sns.barplot(x='city', y=name, data=rests_robust)\n",
+    "    plt.title('{} ({}) per city'.format(name, units[name]))\n",
+    "    plt.show()"
    ]
   },
   {
@@ -205,16 +229,143 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def criteria(name):\n",
+    "    country_criteria(name)\n",
+    "    city_criteria(name)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "criteria('Énergie (kCal)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Magnésium')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Matières grasses')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Sel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Calcium')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Protéines')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Acides gras saturées')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Fibres alimentaires')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Glucides')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Sucres')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Fer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "criteria('Chlore')"
+   ]
   },
   {
    "cell_type": "code",
