add more details

--- a/4-analysis/Queries.ipynb
+++ b/4-analysis/Queries.ipynb
@@ -37,6 +37,7 @@
    },
    "outputs": [],
    "source": [
+    "# pretty print nutriments\n",
     "def pretty_nutriments(nuts):\n",
     "    print('\\n'.join(['{:25}{:.2f}\\t{}\\t{:.2f}'.format(k, v['quantity'], v['unit'], v['variance']) for k, v in nuts.items()]))"
    ]
@@ -162,12 +163,14 @@
    "source": [
     "units = {}\n",
     "rests = []\n",
+    "\n",
+    "# for each city, transform the data into friendly pandas format for futher filtering\n",
     "for city, group in cities.items():\n",
     "    print(city)\n",
     "    for rest, agg in group:\n",
     "        if len(agg.analysis):\n",
     "            for k, v in agg.total.to_dict().items():\n",
-    "                units[k] = v['unit']\n",
+    "                units[k] = v['unit'] # units are all the same\n",
     "            rest = {k: v['quantity'] for k, v in agg.total.to_dict().items()}\n",
     "\n",
     "            rest['city'] = city\n",
@@ -186,6 +189,7 @@
    },
    "outputs": [],
    "source": [
+    "# remove extreme outliers as they come from errors in data entries (e.g. price of one meal > 2K)\n",
     "rests_robust = rests[rests.apply(lambda x: np.abs(x - x.mean()) / x.std() < 3  if type(x) is str else x).all(axis=1)]"
    ]
   },
@@ -198,10 +202,11 @@
    "outputs": [],
    "source": [
     "def country_criteria(name):\n",
+    "    # create bar plot for countries\n",
     "    sns.barplot(x='country', y=name, data=rests_robust)\n",
     "    a = rests_robust[rests_robust.country == 'CH'][name]\n",
     "    b = rests_robust[rests_robust.country == 'FR'][name]\n",
-    "    test = stats.ttest_ind(a, b, equal_var=False)\n",
+    "    test = stats.ttest_ind(a, b, equal_var=False) # perform 2-sample t-test\n",
     "    pval = ', pval = {:.2f}'.format(test.pvalue)\n",
     "    count = ', CH/FR = {}/{}'.format(len(a), len(b))\n",
     "    plt.title('{} ({}) per country{}{}'.format(name, units[name], count, pval))\n",
@@ -217,6 +222,7 @@
    "outputs": [],
    "source": [
     "def city_criteria(name):\n",
+    "    # create bar plot for cities\n",
     "    sns.barplot(x='city', y=name, data=rests_robust)\n",
     "    plt.title('{} ({}) per city'.format(name, units[name]))\n",
     "    plt.show()"
