--- a/4-analysis/Validation.ipynb
+++ b/4-analysis/Validation.ipynb
@@ -75,6 +75,7 @@
    "source": [
     "scores = []\n",
     "\n",
+    "# crude estimation, stem source name and matched name in order to count which matched words are contained into the source one\n",
     "for a in analysis:\n",
     "    for meal in a.analysis:\n",
     "        name = stemmer.stem(meal.name)\n",
